# code-sign-tools

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  clippy.toml
.github/workflows/: ci.yml  release-cargo-code-sign.yml  release-native-code-sign.yml
crates/cargo-code-sign/: Cargo.toml  README.md
crates/cargo-code-sign/src/: main.rs
crates/cargo-code-sign/tests/: it.rs
crates/cargo-code-sign/tests/fixtures/maturin_bin/: Cargo.toml  pyproject.toml
crates/cargo-code-sign/tests/fixtures/maturin_bin/src/: main.rs
crates/cargo-code-sign/tests/fixtures/simple_bin/: Cargo.toml
crates/cargo-code-sign/tests/fixtures/simple_bin/src/: main.rs
crates/cargo-code-sign/tests/fixtures/simple_cdylib/: Cargo.toml
crates/cargo-code-sign/tests/fixtures/simple_cdylib/src/: lib.rs
crates/cargo-code-sign/tests/fixtures/simple_lib/: Cargo.toml
crates/cargo-code-sign/tests/fixtures/simple_lib/src/: lib.rs
crates/native-code-sign/: Cargo.toml  README.md
crates/native-code-sign/src/: lib.rs  macos.rs  secret.rs  windows.rs
crates/native-code-sign/tests/: signing.rs
