[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
collapsible_else_if = "allow"
collapsible_if = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
# Disallowed restriction lints
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
use_self = "warn"
disallowed_methods = "warn"
disallowed_types = "warn"
