[package]
name = "native-code-sign"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Platform-native code signing (macOS codesign, Windows signtool)"
categories = ["development-tools"]
keywords = ["security", "codesign", "signtool", "signing"]

[dependencies]
base64 = "0.22.1"
fs-err = "3"
getrandom = "0.4"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
zeroize = "1"

[dev-dependencies]
fs-err = "3"
temp-env = "0.3.6"
tempfile = "3"

[lints]
workspace = true
